@@ -94,6 +94,7 @@
     * 0607 online help text for host creation in WATO now also explains hostname caching
     * 0908 Check event state: New option "Less Verbose Output"...
     * 0965 Cumulative permissions and contact groups for WATO folders...
+    * 0973 Renaming of hosts via WATO...
     * 0781 FIX: host diag page: fixed problem with update of diagnose subwindows...
     * 0904 FIX: Fixed exception in host parameter overview...
     * 0971 FIX: Fix missing authentication of PHP addons in D-WATO when activation mode is reload...
